# hagent

./: ..gitignore.un~  .coverage.mascm1.2505.XMvFXwLx  .gitignore  .testmondata-shm  .testmondata-wal  1  AGENTS.md  API_RESPONSE_FORMAT_GUIDE.md  CLAUDE.md  LICENSE  README.md  TODO.md  V2CHISEL_BATCH_MCP_REFACTORING_PLAN.md  advisor-llm.yaml  bug_lists_unified.yaml  cleanup.sh  coverage.xml  debug_branch_unit.json  debug_mult.json  dummy_db.yaml  ex  fails.txt  full_adder_out.yaml  getting_started.md  git_diff.txt  git_diff_aacc9e2.txt  hagent_server.bat  hagent_server.sh  multi_perfetto.json  option_1.v  option_2.v  option_3.v  option_4.v  perfetto.json  plan_esp32.md  postcheck-llm.yaml  pp  project_env.sh  pydoc-markdown.yaml  pyproject.toml  (+18 more)
.backup/memory/: code_fix_generator.py  create_test_data.py
.backup/memory/buggy_cpp/: buggy_linked_list.cpp
.backup/memory/buggy_python/: buggy_sorting.py
.backup/memory/data/: memory.db
.backup/memory/memories/: code_fix_generator_embeddings.npy  code_fix_generator_retriever.pkl
.backup2/memory/: README.md  code_fix_generator.py  code_fix_llm_config.yaml  create_test_data.py  db_memory_store.py  few_shot_memory.py  few_shot_memory_conf.yaml  import_data.py  run  test_few_shot_memory_real_data.py
.backup2/memory/programs/: 1_missing_semicolon_fixed.cpp  3_mismatched_brackets_buggy.cpp  3_mismatched_brackets_fixed.cpp  7_memory_leak_buggy.cpp  9_variable_shadowing_fixed.cpp
.claude/agents/: api-designer.md
.github/workflows/: ubuntu.yml
.litellm_cache/: cache.db
bitcnt/: bitcnt.sv  bitcnt_bind.sv  bitcnt_prop.sv  bitcnt_prop_err.sv  pp.sv  prompt1.txt
docs/: common_build_spec.md  common_check_spec.md  developer.md  docker.md  install.md  llm_wrap.md  llm_wrap_prev1.md  models.md  onboarding.md  principles.md  projects.md  tools_vs_mcp.md
equiv_check/: gold_oddj81c9.v  run_d4yd0fqb.ys  run_zdad7k_2.ys
examples/: README.md
examples/Blink/Blink/: Blink.ino
examples/esp32_helloworld/: CMakeLists.txt
examples/esp32_helloworld/main/: CMakeLists.txt  hello_world.c
examples/esp32_led/: blink.c  todo.md
examples/esp32_led/main/: blink_project.c
examples/verilog_adder/: adder.v  adder_tb.v  hagent.yaml
examples/verilog_conv_mac/: conv_mac.v  conv_mac_tb.v  hagent.yaml
experiments/: run_one_mutation.py
experiments/mcp_baseline/: extract_bugs.py  verify_mcp_diff.py  verify_mcp_diff_v2.py
experiments/xiangshan/: apply_one_chisel_diff.py  make_v2chisel_input.py  verilog_chisel_pairs_A.yaml
experiments/xiangshan/a-input/: verilog_diffs_A_xiangshan.yaml  verilog_diffs_A_xiangshan_dbg.yaml
experiments/xiangshan/b-input/: d_mutation_f0_m0_b.yaml  d_mutation_f0_m1_b.yaml  d_mutation_f0_m2_b.yaml  d_mutation_f0_m3_b.yaml  d_mutation_f1_m0_b.yaml  d_mutation_f1_m1_b.yaml  d_mutation_f1_m2_b.yaml  d_mutation_f1_m3_b.yaml  d_mutation_f2_m0_b.yaml  (+31 more)
fpv_cva6/: csr_buffer_scoped_ast.json
full_adder/: full_adder.v
gpt_logs/: alu_prompt_response_logs.txt
hacks/: extract_from_json.py  pp  pp.txt
hagent/: __init__.py  conftest.py  spec.md
hagent/core/: __init__.py  hagent_build.py  llm_template.py  llm_wrap.py  output_manager.py  step.py  tracer.py
hagent/inou/: README.md  builder.py  cli_executor.py  cli_file_tracker.py  cli_locator.py  container_manager.py  execution_context.py  execution_detector.py  executor.py  executor_docker.py  executor_local.py  file_tracker.py  file_tracker_docker.py  file_tracker_local.py  filesystem.py  filesystem_base.py  filesystem_docker.py  filesystem_local.py  locator.py  output_manager.py  path_manager.py  runner.py
hagent/mcp/: .gitignore  GEMINI-arduino.md  GEMINI.md  __init__.py  board_sync.py  command_discovery.py  config_sync.py  hagent-mcp-server.py  log_mcp_server.py  mcp_arduino.py  mcp_build.py  mcp_esp32.py  mcp_message_handlers.py  mcp_template.py  template_example.py
hagent/pipe/: __init__.py
hagent/runner/: __init__.py  __main__.py  commands.py  config.py  render.py  runner  tag.py  tester.py  yaml2toml.py
hagent/step/: __init__.py  test_equiv_check_standalone.py  use_chisel2v.py  use_chisel_diff_applier.py  use_filter_lines.py
hagent/tool/: README.md  __init__.py  chisel2v.py  chisel2v_build.sbt  chisel_diff_applier.py  chisel_diff_corrector.py  cli_bug_detect.py  cli_formal.py  cli_netlist2modules.py  code_scope.py  compile.py  compile_slang.py  diff_verifier.py  docker_diff_applier.py  equiv_check.py  extract_code.py  extract_verilog_diff_keywords.py  file_manager.py  filter_lines.py  fuzzy_grep.py  gen_dep_tcl_and_sva.py  gen_dep_tcl_and_sva.sv  golden_generation.py  image_conf.py  jg_compile_repair_prompt.yaml  jg_postcheck_repair.py  memory.py  metadata_mapper.py  module_finder.py  netlist2modules.py  parse_tool_result.py  property_builder.py  react.py  rtl_opt_catalog.py  spec.md  spec_builder.py  spec_builder_BACKUP_3044000.py  spec_builder_REMOTE_3044000.py  tool.py  trivial.py  (+1 more)
mcp/: README.md
mcp/slang-mcp-server/: main.py  pyproject.toml  run_server.sh  slang_server.py
output/: multi_perfetto.json  react_40212_1755126879.json  react_40212_1755126880.json  simple_perfetto.json
outputs/assertions/: alu_assertions.txt
outputs/preconditions/: alu_preconditions.txt
prof/: combined.prof  test_main.prof  test_working_directory_and_basic_commands.prof
run/: getdata.sh  pp  pp.yaml  pp.yaml.stdout
run/as/: as_01.yaml  as_04.yaml  as_05.yaml  as_07.yaml  as_08.yaml  as_13.yaml
scripts/: avoid_spagetti_code.py  build_perfetto_trace.py  check_yaml.py  cleanup.sh  cleanup_test_containers.py  code_check.sh  coverage_public_unused.py  docker_args.sh  find_used_methods.py  hagent-build.py  label_path_locator.py  mcp_hw.py  method_never_called_check.py  method_privacy_check.py  push_check.sh  run_synalign.py  setup_esp32_mcp.sh  setup_example_verilog_adder_mcp.sh  setup_mcp.sh  setup_simplechisel_mcp.sh  setup_soomrv_mcp.sh  synth.py  uv_bump_versions.py
tests/integration/: README.md  conftest.py  test_docker_tools.py  test_locate_vcd.py  test_synth_lec_bug_injection.py  test_synth_sta_validation.py
verilog_adder_test/: hagent.yaml
(+654 files in other folders)
