 [project]
name = "hagent"
version = "0.1.2"
description = ""
authors = [
    {name = "Farzaneh Rabiei", email = "frabieik@ucsc.edu"},
    {name = "Jose Renau", email = "renau@ucsc.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["pyyaml >=6.0.3", "litellm >=1.81.15", "diskcache >=5.6.3", "pyslang >=9.1.0", "numpy >=2.4.1", "rapidfuzz >=3.14.3", "ruamel-yaml >=0.19.1", "networkx >=3.6.1", "chromadb >=1.4.0", "docker >=7.1.0", "transformers >=4.57.3", "torch >=2.9.1", "sentence-transformers >=5.2.0", "pytest-codecov >=0.7.0", "jinja2 >=3.1.6", "pydoc-markdown >=4.8.2", "fastapi >=0.128.0", "mcp >=1.25.0", "pytest-xdist >=3.8.0", "pytest-forked >=1.6.0", "ruff >=0.14.6", "pytest-testmon >=2.2.0", "tomlkit >=0.13.3", "boto3 >=1.42.26", "pexpect >=4.9.0", "graphviz >=0.21"]

[project.optional-dependencies]
dev = ["pytest >=9.0.2", "pytest-cov >=7.0.0", "pytest-profiling >=1.8.1", "ruff >=0.14.6", "pydoc-markdown >=4.8.2"]

[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest-profiling>=1.8.1",
    "pytest-testmon>=2.1.3",
    "ruff>=0.13.3",
]

[tool.pytest.ini_options]
addopts = "-v -k 'not test_file_manager' --basetemp=output/pytest"
testpaths = ["hagent"]
filterwarnings = [
    "ignore::DeprecationWarning",
   "ignore::UserWarning"
]
markers = [
    "slow: marks tests as slow (deselected by default)"
]

[tool.coverage.run]
source = ["hagent"]
omit = [
    "hagent/core/tests/*",
    "hagent/step/**/tests/*",
    "hagent/tool/**/tests/*",
]
data_file = ".coverage"
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pydoc-markdown]
loaders = [
    { type = "python", search_path = ["."], packages = ["hagent"] }
]
processors = [
    { type = "filter", expression = "obj.name.startswith('hagent.') and not 'test' in obj.name" },
    { type = "smart" },
    { type = "crossref" }
]
renderer = { type = "markdown", filename = "spec.md" }
